--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Monaco', monospace;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,16 +11,29 @@ body {
 }
 
 header {
+    font-family: 'Playfair Display', serif;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    flex: 0 0 33.3333%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 header h1 {
-    font-size: 2.5em;
+    font-size: 3em;
     font-weight: normal;
-    border-bottom: 2px solid black;
-    display: inline-block;
-    padding-bottom: 10px;
+    margin: 0;
+    padding-bottom: 20px;
+    letter-spacing: 0.2em;
+}
+
+header hr {
+    width: 50vw;
+    border: 1px solid grey;
+    background-color: grey;
+    margin: 10px 0;
 }
 
 main {
@@ -28,21 +41,23 @@ main {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    width: 100%;
+    margin-top: -10%;
 }
 
 .folder-container {
-    display: flex;
-    justify-content: space-around;
-    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 70%;
+    justify-items: center;
 }
 
 .folder {
     text-align: center;
-    margin: 0 20px;
 }
 
 .folder img {
-    width: 100px;
+    width: 80px;
     height: auto;
 }
 
@@ -52,10 +67,12 @@ main {
 }
 
 footer {
+    font-family: 'Playfair Display', serif;
     text-align: center;
     margin-top: 50px;
 }
 
 footer p {
-    font-size: 1.2em;
+    font-size: 1.1em;
+    letter-spacing: 0.2em;
 }
