--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Indie Flower';
+  src: url('/fonts/IndieFlower-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
